--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>{{ title }} - Penguin's blog</title>
-    </head>
-    <body>
-        <h1>Hello, {{ user.nickname }}!</h1>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<h1>Hi, {{user.nickname}}!</h1>
+{% for post in posts %}
+<div><p>{{post.author.nickname}} says: <b>{{post.body}}</b></p></div>
+{% endfor %}
+{% endblock %}
