--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<! -- extend from base layout -->
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+<h1>Sign in</h1>
+<form action="" method="post" name="login">
+    {{form.hidden_tag()}}
+    <p>
+        Please enter your OpenID:<br>
+        {{form.openid(size=80)}}<br>
+    </p>
+    <p>{{form.remember_me}} Remember Me</p>
+    <p><input type="submit" value="Sign In"> </p>
+</form>
+{% endblock %}
