--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,6 +8,12 @@
     <p>
         Please enter your OpenID:<br>
         {{form.openid(size=80)}}<br>
+        {% for error in form.openid.errors %}
+            <span style="color: red">{{error}}</span>
+        {% endfor %}<br>
+        |{% for pr in providers %}
+            <a href="javascript:set_openid('{{ pr.url }}', '{{ pr.name}}');">{{ pr.name }}</a> |
+        {% endfor %}
     </p>
     <p>{{form.remember_me}} Remember Me</p>
     <p><input type="submit" value="Sign In"> </p>
