--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,9 @@
         {% if g.user.is_authenticated %}
         | <a href="{{url_for('user', nickname = g.user.nickname) }}">Your Profile</a>
         | <a href="{{ url_for('logout')}}">Logout</a>
+        {% else %}
+        | <a href="{{url_for('login')}}">Log in</a>
+        | <a href="{{url_for('register')}}"> Register</a>
         {% endif %}
     </div>
     <hr>
