--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 {% if g.user.is_authenticated %}
-<h1>Hi, {{user.nickname}}!</h1>
 {% endif %}
+
 {% for post in posts %}
-<div><p>{{post}}</p></div>
+<div class="row">
+    <div class="caption"><h2>{{post.title}}</h2></div>
+    <div class="info"><em>{{post.info}}</em></div>
+</div>
 {% endfor %}
 {% endblock %}
