--- a/app/templates/testBootstrap.html
+++ b/app/templates/testBootstrap.html
@@ -1,56 +1,17 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css">
     <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script><meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Different Columns example</title>
-    <!-- Bootstrap style -->
-    <link href="bs/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{{url_for('static',filename='custom.css')}}" type="text/css"/>
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/font-awesome.min.css')}}" type="text/css">
+
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Bootstrap, different rows</h1>
-            <p>This row takes 12 columns, so it takes all page width</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-9">
-            <h2>JavaScript</h2>
-            <p>From the early years of the Web JavaScript was outcasted for
-                being considered a toy rather than a first class programming language.
-                But technologies have changed since then and with the raise of Ajax,
-                the ever-growing frameworks and the birth of Node.js, JavaScript has
-                become the language for the Web on his own right.
-            </p>
-        </div>
-        <div class="col-md-3">
-            <h2>Menu</h2>
-            <ul>
-                <li>This</li>
-                <li>Pretends</li>
-                <li>To be</li>
-                <li>A menu</li>
-            </ul>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
-            <h3>Section 1</h3>
-            <p>This is some bla bla bla for section 1</p>
-        </div>
-        <div class="col-md-4">
-            <h3>Section 2</h3>
-            <p>This is some bla bla bla for section 2</p>
-        </div>
-        <div class="col-md-4">
-            <h3>Section 3</h3>
-            <p>This is some bla bla bla for section 3</p>
-        </div>
-    </div>
-</div>
+<i class="fa fa-camera-retro fa-lg"></i> fa-lg
+<i class="fa fa-camera-retro"></i> fa-camera-retro
 </body>
 </html>
