--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -1,12 +1,41 @@
 body{
-    opacity: 0.9;
+}
+.navbar{
+    opacity: 0.8;
+    margin-bottom: 0px;
 }
 .back{
-    width: auto;
-    height: auto;
+    position: absolute;
+    width: 1500px;
+    height: 1500px;
+    margin-left: 0px;
+    margin-right: 0px;
     background: url(images/back.png);
+    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: center;
+    opacity: 0.35;
+    z-index: 0;
+}
+.col-lg-10#content{
+    height: 100%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 0px;
+    background: rgba(255,255,255,0.7);
+    z-index: 1;
+
+}
+.container{
+    height: 1500px;
+}
+.container-back{
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.row{
+    padding-left: 5px;
+    padding-right: 5px;
+    height: 150px;
 }
 .btn{
     border-radius: 0px;
