--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,5 +1,6 @@
-<table>
-    <tr valign="top">
-        <td><img src="{{post.author.avatar(50)}}"</td><td><i>{{post.author.nickname}} says:</i><br>{{post.body}}</td>
-    </tr>
-</table>
+{% extends "base.html" %}
+{% block content %}
+<div>
+    {{post.body}}
+</div>
+{% endblock %}
