--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,17 +4,18 @@
     <!-- use bootstrap -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css">
+    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename ='font-awesome/css/font-awesome.min.css')}}" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/obsidian.min.css">
 
-    <link rel="stylesheet" href="{{url_for('static', filename='custom.css')}}" type="text/css"/>
-
-    <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- highlight.js-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+
+    <link rel="stylesheet" href="{{url_for('static', filename='custom.css')}}" type="text/css"/>
 
     {% if title %}
     <title>{{title}} - Penguin's blog</title>
@@ -65,7 +66,7 @@
 <div class="container-back">
     <div class="back"></div>
     <div class="container">
-        <div class="col-lg-10" role="main" id="content">
+        <div class="col-lg-9" role="main" id="content">
             {% block content %}
 
             {% endblock %}
@@ -73,7 +74,7 @@
     </div>
     <div class="panel-footer">Copyright © 2016 Penguin's Blog · Powered by Bootstrap</div>
 </div>
-
+<!-- 显示错误信息 -->
 {% with messages = get_flashed_messages() %}
 {% if messages %}
 <ul>
