--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -12,7 +12,7 @@
 
         </div>
         <div class="post-body">
-            {{post.body}}
+            {{post.body.encode("utf-8")}}
         </div>
     </div>
 
