--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -66,12 +66,13 @@ body{
     position: absolute;
     display: block;
     width: 100%;
-    height: 1500px;
+    min-height: 2500px;
+    height: 100%;
     margin-left: 0px;
     margin-right: 0px;
     background: url(images/back.png);
     background-attachment: fixed;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     opacity: 0.35;
     z-index: -1;
 }
@@ -115,6 +116,9 @@ body{
     border-radius: 0px;
 }
 .panel-footer{
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
     background: #333;
     text-align: center;
     color: #5fdedd;
