--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -84,6 +84,6 @@
 </ul>
 {% endif %}
 {% endwith %}
-<div class="panel-footer">Copyright © 2016 Penguin's Blog · Powered by Bootstrap</div>
+<footer class="panel-footer">Copyright © 2016 Penguin's Blog · Powered by Bootstrap</>
 </body>
 </html>
