--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -1,4 +1,5 @@
 body{
+    z-index: 0;
     /*font-family: 'Open Sans','Helvetica Neue',Arial,'Hiragino Sans GB','Microsoft YaHei','WenQuanYi Micro Hei',sans-serif;*/
 }
 .navbar{
@@ -32,11 +33,9 @@ body{
 .navbar .nav > li:hover .dropdown-menu {
     display: block;
 }
-
 .navbar-nav>.active>a:hover{
     color:#555;
     background-color:#282828}
-
 .navbar-right{
     margin-right: 5px;
     font-size: medium;
@@ -45,28 +44,29 @@ body{
     color: #46a6c0;
     background-color: #282828;
 }
-
 .sidebar{
-    float: right;
+    /*float: right;*/
+    position: absolute;
+    right: 20px;
     display: block;
     width: 300px;
-    margin-right: 25px;
+    height: 100%;
     background-attachment: fixed;
     background: rgba(255,255,255,0.9);
-    z-index: 3;
+    z-index: 5;
 }
-}
-.sidebar-table{
-    display: block;
-    line-height: 40px;
-    width: 200px;
-    align-content: center;
+.container-back{
+    position: relative;
+    margin-top: 52px;
+    min-height: 100%;
+    height: 100%;
+    width: auto;
+    z-index: 0;
 }
 .back{
     position: absolute;
     display: block;
     width: 100%;
-    min-height: 2500px;
     height: 100%;
     margin-left: 0px;
     margin-right: 0px;
@@ -74,64 +74,29 @@ body{
     background-attachment: fixed;
     background-repeat: repeat-y;
     opacity: 0.35;
-    z-index: -1;
+    z-index: 0;
+}
+.container{
+    /*padding-top: 52px;*/
+    height: 100%;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: auto;
+    z-index: 1;
 }
 .col-lg-9#content{
-    height: 1500px;
-    margin-top: 52px;
+    height: 100%;
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 0px;
     padding: 15px;
     background: rgba(255,255,255,0.9);
-    z-index: 1;
-
-}
-.container{
-    position: relative;
-    height: 1500px;
-    margin-left: 5px;
-    margin-right: 5px;
-    width: auto;
-}
-.container-back{
-    margin-top: 52px;
-}
-
-.row{
-    padding-left: 5px;
-    padding-right: 5px;
-    height: 150px;
-}
-.row{
-    border-bottom: 1px solid lightgray;
-}
-.sidebar-row{
-    border-bottom: 1px solid lightgray;
-}
-.icon{
-    font-size: large;
-}
-.btn{
-    border-radius: 0px;
-}
-.panel-footer{
-    position: fixed;
-    bottom: 0px;
-    padding: 0px;
-    padding-top: 3px;
-    width: 100%;
-    background: #333;
-    text-align: center;
-    font-size: small;
-    color: #5fdedd;
-    z-index: 1;
-    height: 25px;
-    line-height: 20px;
+    /*z-index: 1;*/
 }
 .post{
     margin: 10px;
     padding: 10px;
+    padding-bottom: 100px;
 }
 .post-header, .post-body{
     padding-left: 2em;
@@ -181,11 +146,42 @@ body{
     padding-top: 30px;
     padding-left: 2em;
     padding-right: 2em;
-    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
-    font-size: 15px;
-    font-weight: bold;
+    font-family: 'Helvetica Neue',Hiragino Sans GB,Microsoft Yahei,WenQuanYi Micro Hei,Helvetica,Arial,sans-serif;
+    font-size: 17px;
+    font-weight: 400;
     color: #505050;
 }
+
+.row{
+    padding-left: 5px;
+    padding-right: 5px;
+    height: 150px;
+}
+.row{
+    border-bottom: 1px solid lightgray;
+}
+.sidebar-row{
+    border-bottom: 1px solid lightgray;
+}
+
+.btn{
+    border-radius: 0px;
+}
+.panel-footer{
+    position: absolute;
+    bottom: 0px;
+    padding: 0px;
+    padding-top: 3px;
+    width: 100%;
+    background: #333;
+    text-align: center;
+    font-size: small;
+    color: #5fdedd;
+    z-index: 1;
+    height: 25px;
+    line-height: 20px;
+}
+
 .post-content{
     max-height: 500px;
     border: 1px solid #111;
