--- a/app/templates/testBootstrap.html
+++ b/app/templates/testBootstrap.html
@@ -1,4 +1,28 @@
-{% extends "base.html" %}
-{% block content %}
-<a class="list-group-item" href="#"><i class="fa fa-cog fa-fw"></i>&nbsp; Settings</a>
-{% endblock %}
+ <body>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">...</nav>
+<div class="sidebar"></div>
+<div class="container-back">
+    <div class="back"></div>
+    <div class="container">
+        <div class="col-lg-9" role="main" id="content">
+            <div>
+                <div class="post">
+                    <div class="post-header">
+                        <div class="post-title"></div>
+                        <div class="post-header-buttom">
+                            <div class="post-timestamp"></div>
+                            <div class="post-header-buttom-divider">|</div>
+                            <div class="post-tag"></div>
+                        </div>
+
+                    </div>
+                    <div class="post-body font-kai">
+                        content
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+    
