--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,7 +32,7 @@
     </div>
     <div>
         <ul class="nav navbar-nav">
-            <li class="dropdown"><a href="/post" class="dropdown-toggle" data-toggle="dropdown">文章<b class="caret"></b> </a>
+            <li><a href="/post" class="dropdown-toggle" data-toggle="dropdown">文章<b class="caret"></b> </a>
                 <ul class="dropdown-menu">
                     <li><a href="#">1</a></li>
                     <li><a href="#">2</a></li>
