--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -75,7 +75,7 @@ body{
 .container-back{
     position: relative;
     margin-top: 52px;
-    min-height: 100%;
+    min-height: 1000px;
     height: 100%;
     width: auto;
     z-index: 0;
@@ -103,6 +103,7 @@ body{
 }
 .col-lg-9#content{
     height: 100%;
+    min-height: 1000px;
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 0px;
@@ -188,8 +189,8 @@ body{
     line-height: 20px;
 }
 
-.row{
-    padding-left: 5px;
+.index-row{
+    padding-left: 20px;
     padding-right: 5px;
     height: 150px;
     border-bottom: 1px solid lightgray;
