调整主业条目显示逻辑，每页显示10条

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 {% endif %}
 
 {% for post in posts %}
-<div class="row">
+<div class="index-row">
     <div class="caption"><h2>{{post.title}}</h2></div>
     <div class="info"><em>{{post.info}}</em></div>
 </div>
