--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 
 {% for post in posts %}
 <div class="index-row">
-    <div class="caption"><h2>{{post.title}}</h2></div>
+    <div class="post-title"><a href={{url_for('post',post_id = post.id)}}>{{post.title}}</a></div>
     <div class="info"><em>{{post.info}}</em></div>
 </div>
 {% endfor %}
