--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,8 @@
             <div class="post-timestamp"> {{post.timestamp}}</div>
             <div class="post-header-buttom-divider">|</div>
             <div class="post-tag">{{post.tag}}</div>
+            <div class="post-header-buttom-divider">|</div>
+            <div class="post-lan">{{post.lan_used}}</div>
         </div>
     </div>
     <div class="info-back">
