实现根据post_id及自然连接查讯tag

--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -7,7 +7,7 @@
             <div class="post-header-buttom">
                 <div class="post-timestamp"> {{post.timestamp}}</div>
                 <div class="post-header-buttom-divider">|</div>
-                <div class="post-tag">{{post.tag}}</div>
+                <div class="post-tag">{{tag}}</div>
                 <div class="post-header-buttom-divider">|</div>
                 <div class="post-lan">{{post.lan_used}}</div>
             </div>
