--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -1,4 +1,5 @@
 body{
+    position: relative;
     z-index: 0;
     font-family: 'Open Sans','Helvetica Neue',Arial,'Hiragino Sans GB','Microsoft YaHei','WenQuanYi Micro Hei',sans-serif;
 }
@@ -63,14 +64,14 @@ body{
 }
 .sidebar{
     /*float: right;*/
-    position: absolute;
+    position: fixed;
     right: 20px;
     display: block;
     width: 300px;
     height: 100%;
     background-attachment: fixed;
     background: rgba(255,255,255,0.9);
-    z-index: 5;
+    z-index: 1;
 }
 .sidebar-row{
     border-bottom: 1px solid lightgray;
