--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -113,6 +113,7 @@ body{
     margin-right: 5px;
     margin-top: 0px;
     padding: 15px;
+    padding-bottom: 50px;
     background: rgba(255,255,255,0.9);
     /*z-index: 1;*/
 }
