--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,13 +10,20 @@
         <div class="post-header-buttom">
             <div class="post-timestamp"> {{post.timestamp}}</div>
             <div class="post-header-buttom-divider">|</div>
-            <div class="post-tag">{{tag}}</div>
-            <div class="post-header-buttom-divider">|</div>
             <div class="post-lan">{{post.lan_used}}</div>
+            <div class="post-header-buttom-divider">|</div>
+            <div class="post-tag">
+                 {% for tag in tags[post.id - 1] %}
+                <button class="btn-link tag-btn"><a href="#"> {{tag}}</a></button>
+                 {% endfor %}
+            </div>
         </div>
+
     </div>
-    <div class="info-back">
-        <div class="post-info">{{post.info}}</div>
+    <div class="post-info">
+        <div class="info-back">
+            <div class="post-info-body">{{post.info}}</div>
+        </div>
     </div>
 </div>
 {% endfor %}
