添加浮动按钮，实现首页滑动加载更多内容

--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -279,3 +279,11 @@ body{
 pre{
     padding: 0px;
 }
+#back-to-top{
+    /*float: right;*/
+    position: fixed;
+    bottom: 100px;
+    right: 100px;
+    background-color: #a31515;
+    z-index: 5;
+}
