--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,6 +82,10 @@
         </div>
     </div>
 </div>
+<!-- 浮动按钮 -->
+    <button class="btn" id="back-to-top">
+        back
+    </button>
 <!-- 显示错误信息 -->
 {% with messages = get_flashed_messages() %}
 {% if messages %}
