--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -84,7 +84,7 @@
 </div>
 <!-- 浮动按钮 -->
     <button class="btn" id="back-to-top">
-        back
+        <i class="fa fa-arrow-up"></i>
     </button>
 <!-- 显示错误信息 -->
 {% with messages = get_flashed_messages() %}
