修改导航栏显示项目，修改首页自动加载，避免所有页面加载错误

--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -11,6 +11,7 @@ body{
 .navbar .nav > li > a{
     color: #5fdedd;
     background-color: #333;
+    font-size: medium;
 }
 .navbar .nav > li > a:hover {
     color: #5fdedd;
