使用MathJax使markdown支持latex

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,9 @@
     <!--<script>hljs.initHighlightingOnLoad();</script>-->
     <!-- jQuery-->
     <script type=text/javascript src="{{url_for('static', filename='jquery.js') }}"></script>
+
+    <!-- 让markdown支持latex数学公式 -->
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='custom.css')}}" type="text/css"/>
     <!-- 测试js-->
     <script type="text/javascript" src="{{url_for('static', filename ='test.js') }}"></script>
