--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -260,8 +260,26 @@ body{
 .btn{
     border-radius: 0px;
 }
-.post-content{
-    max-height: 500px;
+/*.post-content{*/
+/*max-height: 500px;*/
+/*border: 1px solid #111;*/
+/*padding: 0.8em 1em;*/
+/*font: 14px/22px Consolas, Monaco, 'Andale Mono', monospace;*/
+/*border-radius: 3px;*/
+/*background-color: #21221d;*/
+/*background-image: -webkit-linear-gradient(#21221d 50%, #272822 50%);*/
+/*background-image: -moz-linear-gradient(#21221d 50%, #272822 50%);*/
+/*background-image: -ms-linear-gradient(#21221d 50%, #272822 50%);*/
+/*background-image: -o-linear-gradient(#21221d 50%, #272822 50%);*/
+/*background-image: linear-gradient(#21221d 50%, #272822 50%);*/
+/*background-size: 44px 44px;*/
+/*background-origin: content-box;*/
+/*overflow: auto;*/
+/*-webkit-overflow-scrolling: touch;*/
+/*}*/
+/*代码隔行变色*/
+.hljs{
+    /*max-height: 500px;*/
     border: 1px solid #111;
     padding: 0.8em 1em;
     font: 14px/22px Consolas, Monaco, 'Andale Mono', monospace;
@@ -294,3 +312,30 @@ pre{
     color: #acafb4;
     z-index: 5;
 }
+.archives{
+    padding-top: 50px;
+    padding-left: 50px;
+}
+.archives-row{
+    display: block;
+    height: 50px;
+    width: 100%;
+    font-size: medium;
+    background: lightblue;
+    border-left: 0.5em solid #ccc;
+    -webkit-transition: border-left 0.45s;
+    -moz-transition: border-left 0.45s;
+    -o-transition: border-left 0.45s;
+    -ms-transition: border-left 0.45s;
+    transition: border-left 1s;
+}
+section.archives-row :hover{
+    border-left: 0.5em solid #fb6857;
+}
+.archives-timestamp, .archives-title{
+    display: inline-block;
+}
+.archives-timestamp{
+    right: 30px;
+}
+
