--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,15 +45,16 @@
     <div>
         <ul class="nav navbar-nav">
             <!-- 下拉菜单，通过类别查看文章 -->
-            <li class="dropdown-toggle" data-toggle="dropdown"><a href="{{url_for('archives')}}">Archives<b class="caret"></b> </a>
-                <ul class="dropdown-menu">
-                    {% for class in classification %}
-                    <li><a href="{{url_for('archives',class = class)}}">{{class[0]}}</a></li>
-                    {% endfor %}
-
-                    <li class="divider"></li>
-                    <li><a href="#">分离的链接</a></li>
-                </ul>
+            <!--<li class="dropdown-toggle" data-toggle="dropdown"><a href="{{url_for('archives')}}">Archives<b class="caret"></b> </a>-->
+                <!--<ul class="dropdown-menu">-->
+                    <!--{% for class in classification %}-->
+                    <!--<li><a href="{{url_for('archives',class = class)}}">{{class[0]}}</a></li>-->
+                    <!--{% endfor %}-->
+                    <!--<li class="divider"></li>-->
+                    <!--<li><a href="#">分离的链接</a></li>-->
+                <!--</ul>-->
+            <!-- archives 不使用下拉菜单-->
+            <li class="dropdown-toggle" data-toggle="dropdown"><a href="{{url_for('archives')}}">Archives</a>
             </li>
             <!-- 相册 -->
             <li><a href="#">Illustrations</a> </li>
